improvement: match api response with message via mapper