@@ -1,6 +1,8 @@
 package com.betvictor.repository;
 
 import com.betvictor.repository.entity.WordStatsEntity;
+import com.betvictor.repository.mapper.WordStatsMapper;
+import com.betvictor.repository.model.WordStats;
 import com.betvictor.repository.repository.WordStatsRepository;
 import org.junit.jupiter.api.Test;
 import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMockMvc;
@@ -14,8 +16,6 @@ import org.springframework.beans.factory.annotation.Autowired;
 import java.math.BigDecimal;
 import java.math.RoundingMode;
 import java.time.LocalDateTime;
-import java.time.format.DateTimeFormatter;
-import java.util.Arrays;
 import java.util.List;
 
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
@@ -30,10 +30,12 @@ public class HistoryControllerTest {
     private static final BigDecimal AVG_PROCESSING_TIME = BigDecimal.valueOf(181.55).setScale(2, RoundingMode.HALF_UP);
     private static final BigDecimal TOTAL_PROCESSING_TIME = BigDecimal.valueOf(1810.00).setScale(2, RoundingMode.HALF_UP);
     private static final LocalDateTime CREATED_AT = LocalDateTime.now();
-    private static final String CREATED_AT_STRING = CREATED_AT.format(DateTimeFormatter.ofPattern("yyyy-MM-dd'T'HH:mm:ss.SSSSSS"));
 
     @Autowired
     private MockMvc mockMvc;
+
+    @MockitoBean
+    private WordStatsMapper wordStatsMapper;
 
     @MockitoBean
     private WordStatsRepository repository;
@@ -41,7 +43,7 @@ public class HistoryControllerTest {
     @Test
     public void testGetHistory() throws Exception {
         // Arrange
-        WordStatsEntity wordStats1 = WordStatsEntity.builder()
+        WordStatsEntity wordStatsEntity = WordStatsEntity.builder()
                 .mostFrequentWord(MOST_FREQUENT_WORD)
                 .avgParagraphSize(AVG_PARAGRAPH_SIZE)
                 .avgParagraphProcessingTime(AVG_PROCESSING_TIME)
@@ -49,9 +51,9 @@ public class HistoryControllerTest {
                 .createdAt(CREATED_AT)
                 .build();
 
-        List<WordStatsEntity> wordStatsList = Arrays.asList(wordStats1);
-
-        when(repository.findTop10ByOrderByCreatedAtDesc()).thenReturn(wordStatsList);
+        WordStats wordStats = new WordStats(MOST_FREQUENT_WORD, AVG_PARAGRAPH_SIZE, AVG_PROCESSING_TIME, TOTAL_PROCESSING_TIME);
+        when(repository.findTop10ByOrderByCreatedAtDesc()).thenReturn(List.of(wordStatsEntity));
+        when(wordStatsMapper.toModel(wordStatsEntity)).thenReturn(wordStats);
 
         // Act and assert
         mockMvc.perform(get("/betvictor/history"))
@@ -59,12 +61,11 @@ public class HistoryControllerTest {
                 .andExpect(content().json("""
                     [
                         {
-                                "mostFrequentWord": "%s",
-                                "avgParagraphSize": %f,
-                                "avgParagraphProcessingTime": %f,
-                                "totalProcessingTime": %f,
-                                "createdAt": "%s"
+                                "freq_word": "%s",
+                                "avg_paragraph_size": %f,
+                                "avg_paragraph_processing_time": %f,
+                                "total_processing_time": %f
                         }
-                    ]""".formatted(MOST_FREQUENT_WORD, AVG_PARAGRAPH_SIZE, AVG_PROCESSING_TIME, TOTAL_PROCESSING_TIME, CREATED_AT_STRING)));
+                    ]""".formatted(MOST_FREQUENT_WORD, AVG_PARAGRAPH_SIZE, AVG_PROCESSING_TIME, TOTAL_PROCESSING_TIME)));
     }
 }
